--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -14,7 +14,14 @@ body {
     width: 800px;
     margin: 50px 350px;
     border-width: 3px;
+    background-color: white;
 }       
 .blueHeader {
-    background-color: #cae2e8   ;
+    background-color: #cae2e8;
+}
+
+#homeDiv {
+    height: 900px;
+    margin: 0px 350px;
+    padding-top: 50px;
 }
