--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -10,12 +10,9 @@ and open the template in the editor.
 body {
     text-align: center;
 }
-#table1 {
+/*#table1 {
     width: 800px;
-    margin: 50px 350px;
-    border-width: 3px;
-    background-color: white;
-}       
+}       */
 .blueHeader {
     background-color: #cae2e8;
 }
