--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -7,7 +7,7 @@ and open the template in the editor.
     Created on : Sep 19, 2016, 4:40:33 PM
     Author     : jcarrillo
 */
-body {
+.alignCenter {
     text-align: center;
 }
 
@@ -23,4 +23,17 @@ body {
     height: 900px;
     margin: 0px 350px;
     padding-top: 50px;
+}
+
+#form1 {
+    margin-top: 40px;
+}
+
+#addForm, #updateForm {
+    margin: 30px;
+    width: 500px;
+}
+
+label {
+    
 }
